--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,10 +5,16 @@
     <h1>Home Templates</h1>
 
     <div>
+
+        <a href="{% url 'create-room' %}">Skapa ett rum</a>
+
         <div>
             {% for room in rooms %}
                 <div>
+                    <span>@{{ room.host.username }}</span>
                     <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
+                    <small>{{ room.topic.name }}</small>
+                    <hr>
                 </div>
             {% endfor %}
         </div>
