--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -11,6 +11,8 @@
         <div>
             {% for room in rooms %}
                 <div>
+                    <a href="{% url 'update-room' room.id %}">Redigera</a>
+                    <a href="{% url 'delete-room' room.id %}">Radera</a>
                     <span>@{{ room.host.username }}</span>
                     <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
                     <small>{{ room.topic.name }}</small>
