--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -2,24 +2,47 @@
 
 
 {% block content %}
-    <h1>Home Templates</h1>
 
-    <div>
+<style>
+    .home-container {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
 
-        <a href="{% url 'create-room' %}">Skapa ett rum</a>
+    <div class="home-container">
 
-        <div>
-            {% for room in rooms %}
+        <aside>
+            <h3>Ämnen</h3>
+            <hr>
+
+            <div>
+                <a href="{% url 'home' %}">Alla</a>
+            </div>
+
+            {% for topic in topics %}
                 <div>
-                    <a href="{% url 'update-room' room.id %}">Redigera</a>
-                    <a href="{% url 'delete-room' room.id %}">Radera</a>
-                    <span>@{{ room.host.username }}</span>
-                    <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
-                    <small>{{ room.topic.name }}</small>
-                    <hr>
+                    <a href="{% url 'home' %}?q={{ topic.name }}">{{ topic.name }}</a>
                 </div>
             {% endfor %}
+        </aside>
+
+        <div>
+            <a href="{% url 'create-room' %}">Skapa ett rum</a>
+            <div>
+                {% for room in rooms %}
+                    <div>
+                        <a href="{% url 'update-room' room.id %}">Redigera</a>
+                        <a href="{% url 'delete-room' room.id %}">Radera</a>
+                        <span>@{{ room.host.username }}</span>
+                        <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
+                        <small>{{ room.topic.name }}</small>
+                        <hr>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
+
     </div>
 
 {% endblock %}
