--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,44 +6,26 @@
 <style>
     .home-container {
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
     <div class="home-container">
 
         <aside>
-            <h3>Ämnen</h3>
-            <hr>
-
-            <div>
-                <a href="{% url 'home' %}">Alla</a>
-            </div>
-
-            {% for topic in topics %}
-                <div>
-                    <a href="{% url 'home' %}?q={{ topic.name }}">{{ topic.name }}</a>
-                </div>
-            {% endfor %}
+            {% include 'base/topics_component.html' %}
         </aside>
 
         <div>
             <h5> Det finns för närvarande {{ room_count }} rum att välja mellan.</h5>
             <a href="{% url 'create-room' %}">Skapa ett rum</a>
-            <div>
-                {% for room in rooms %}
-                    <div>
-                        {% if request.user == room.host %}
-                            <a href="{% url 'update-room' room.id %}">Redigera</a>
-                            <a href="{% url 'delete-room' room.id %}">Radera</a>
-                        {% endif %}
-                        <span>@{{ room.host.username }}</span>
-                        <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
-                        <small>{{ room.topic.name }}</small>
-                        <hr>
-                    </div>
-                {% endfor %}
-            </div>
+
+            {% include 'base/feed_component.html' %}
+
+        </div>
+
+        <div>
+            {% include 'base/activity_component.html' %}
         </div>
 
     </div>
