--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -4,7 +4,7 @@
 <hr>
 {% for message in room_messages %}
     <div>
-        <small>@{{ message.user }} {{ message.created | timesince }}</small>
+        <small><a href="{% url 'user-profile' message.user.id %}">@{{ message.user }}</a> {{ message.created | timesince }}</small>
         <!-- TODO: Display the other user the person replied to? -->
         <small>svarade i "{{ message.room }}"</small>
 
