--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RealStudies</title>
+
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
 </head>
 <body>
     {% include 'navbar.html' %}
