--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -1,17 +1,54 @@
+<div class="activities">
+      <div class="activities__header">
+        <h2>Aktivitet</h2>
+      </div>
+      {% for message in room_messages %}
+      <div class="activities__box">
+        <div class="activities__boxHeader roomListRoom__header">
+          <a href="{% url 'user-profile' message.user.id %}" class="roomListRoom__author">
+            <div class="avatar avatar--small">
+              <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+            </div>
+            <p>
+              @{{ message.user }}
+              <span>{{ message.created | timesince }} sedan</span>
+            </p>
+          </a>
+          {% if request.user == message.user %}
+          <div class="roomListRoom__actions">
+            <a href="{% url 'delete-message' message.id %}">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                <title>remove</title>
+                <path
+                  d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
+                ></path>
+              </svg>
+            </a>
+          </div>
+          {% endif %}
+
+        </div>
+        <div class="activities__boxContent">
+          <!-- TODO: Display the other user the person replied to?-->
+          <p>svarade i <a href="{% url 'room' message.room.id %}">{{ message.room }}</a></p>
+          <div class="activities__boxRoomContent">
+              {{ message }}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+
+    </div>
+
+
 <!-- TODO: What about using this for displaying responses or messages in rooms where the user is
-           participating? Also, shouldn't there be a subscribe/watch button for conversations and rooms?  -->
+           participating? Also, shouldn't there be a subscribe/watch button for conversations and rooms?
 <h3>Aktivitet</h3>
 <hr>
 {% for message in room_messages %}
     <div>
         <small><a href="{% url 'user-profile' message.user.id %}">@{{ message.user }}</a> {{ message.created | timesince }}</small>
-        <!-- TODO: Display the other user the person replied to? -->
+        <!-- TODO: Display the other user the person replied to?
         <small>svarade i "{{ message.room }}"</small>
-
-        <p>{{ message }}</p>
-        {% if request.user == message.user %}
-            <a href="{% url 'delete-message' message.id %}">Radera meddelande</a>
-        {% endif %}
-        <hr>
     </div>
-{% endfor %}
+{% endfor %}-->
