--- a/templates/main.html
+++ b/templates/main.html
@@ -1,29 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RealStudies</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
 
-    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
-</head>
-<body>
+  <body>
+
     {% include 'navbar.html' %}
 
     {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
+        <ul class="messages">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
     {% endif %}
 
     {% block content %}
 
+
+
     {% endblock %}
 
-</body>
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
