Added more styling

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="room__message">
-            <form action="#"><input name="" placeholder="Write your message here..." /></form>
+            <form action="" method="POST">{% csrf_token %}<input name="body" placeholder="Skriv ett meddelande..." /></form>
           </div>
         </div>
         <!-- Room End -->
