--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -1,12 +1,12 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <main class="delete-item layout">
+    <main class="update-account layout">
         <div class="container">
             <div class="layout__box">
                 <div class="layout__boxHeader">
                     <div class="layout__boxTitle">
-                        <a href="{{ request.META.HTTP_REFERER }}">
+                        <a href="{% url 'home' %}">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                 viewBox="0 0 32 32">
                                 <title>arrow-left</title>
@@ -15,23 +15,28 @@
                                 </path>
                             </svg>
                         </a>
-                        <a href="{{ request.META.HTTP_REFERER }}"><h3>Tillbaka</h3></a>
+                        <h3>Redigera din profil</h3>
                     </div>
                 </div>
                 <div class="layout__body">
                     <form class="form" action="" method="POST">
                         {% csrf_token %}
+
+                        {% for field in form %}
                         <div class="form__group">
-                            <p>Är du verkligen helt 100% säker på att du är medveten om vad du sysslar med och att du vill radera följande: "{{obj}}"?</p>
+                            <label for="profile_pic">{{ field.label }}</label>
+                            {{ field }}
                         </div>
+                        {% endfor %}
 
-                        <div class="for__group">
-                            <input class="btn btn--main" type="submit" value="Jag är säker." />
+                        <div class="form__action">
+                            <a class="btn btn--dark" href="index.html">Avbryt</a>
+                            <button class="btn btn--main" type="submit">Spara</button>
                         </div>
-
                     </form>
                 </div>
             </div>
         </div>
+      </div>
     </main>
 {% endblock content %}
