--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -23,7 +23,7 @@
           </label>
         </form>
         <div class="mobile-menuItems">
-          <a class="btn btn--main btn--pill" href="#">Ämnen</a>
+          <a class="btn btn--main btn--pill" href="{% url 'topics' %}">Ämnen</a>
           <a class="btn btn--main btn--pill" href="#">Aktivitet</a>
         </div>
       </div>
