added activity page

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -24,7 +24,7 @@
         </form>
         <div class="mobile-menuItems">
           <a class="btn btn--main btn--pill" href="{% url 'topics' %}">Ämnen</a>
-          <a class="btn btn--main btn--pill" href="#">Aktivitet</a>
+          <a class="btn btn--main btn--pill" href="{% url 'activity' %}">Aktivitet</a>
         </div>
       </div>
       <div class="roomList__header">
