At this point I'm not ever sure what I've done during the last hours, oh well. GN

--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -23,7 +23,7 @@
 
             <div class="form__group">
 
-              <label for="room_topic">Välj ett ämne</label>
+              <label for="room_topic">Välj en kurs</label>
               <input type="text" value="{{room}}" name="topic" id="topic" list="topic-list">
               <datalist id="topic-list">
                   <select name="room_topic" id="room_topic">
