--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
   <div class="container">
     <a href="{% url 'home' %}" class="header__logo">
       <img src="{% static 'imgs/logo.svg' %}" />
-      <h1>RealStudies</h1>
+      <h1 style="color: #44bfa7;">RealPlugget</h1>
     </a>
     <form class="header__search" method="GET" action="{% url 'home' %}">
       <label>
